@@ -15,6 +15,7 @@ class ConfigurationProgramPaths implements ProgramPaths {
 	private static final String KEY_TSMUXER_PATH             = "tsmuxer_path";
 	private static final String KEY_FLAC_PATH                = "flac_path";
 	private static final String KEY_DCRAW                    = "dcraw_path";
+	private static final String KEY_IMCONVERT_PATH           = "imconvert_path";
 
 	private final Configuration configuration;
 	private final ProgramPaths defaults;
@@ -82,5 +83,10 @@ class ConfigurationProgramPaths implements ProgramPaths {
 	@Override
 	public String getDCRaw() {
 		return stringFromConfigFile(KEY_DCRAW, defaults.getDCRaw());
+	}
+	
+	@Override
+	public String getIMConvertPath() {
+		return stringFromConfigFile(KEY_IMCONVERT_PATH, defaults.getIMConvertPath());
 	}
 }
