@@ -79,4 +79,9 @@ class WindowsRegistryProgramPaths implements ProgramPaths {
 	public String getDCRaw() {
 		return defaults.getDCRaw();
 	}
+	
+	@Override
+	public String getIMConvertPath() {
+		return defaults.getIMConvertPath();
+	}
 }
