@@ -11,6 +11,7 @@ FoldTab.13=Thumbnails
 FoldTab.14=Use MPlayer for Video Thumbnails
 FoldTab.15=Alphabetical (A-Z)
 FoldTab.20=ASCIIbetical
+FoldTab.21=Image thumbnails
 FoldTab.16=By Date, newest first
 FoldTab.17=By Date, oldest first
 FoldTab.18=File order:
