@@ -14,6 +14,7 @@ FoldTab.16=Nowsze na pocz\u0105tku
 FoldTab.18=Metoda sortowania plik\u00f3w:
 FoldTab.19=Miniatury DVD ISO
 FoldTab.2=Przeskanuj wszystkie udost\u0119pnione foldery
+FoldTab.21=Miniatury zdj\u0119\u0107
 FoldTab.23=Pobierz z amazon.com
 FoldTab.24=Pobierz z discogs.com
 FoldTab.26=Wy\u015bwietlanie miniatur audio: 
